--- a/AutomotiveMB.csproj
+++ b/AutomotiveMB.csproj
@@ -1,21 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="DataAccess\" />
-    <Folder Include="Helpers\" />
-    <Folder Include="Pages\Client\" />
-    <Folder Include="Pages\Vehicles\" />
-    <Folder Include="Sheets\" />
-    <Folder Include="Storage\" />
-    <Folder Include="Services\" />
-    <Folder Include="Repositories\" />
-  </ItemGroup>
 
 </Project>
