--- a/AutomotiveMB.csproj
+++ b/AutomotiveMB.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Remove="Data\clients.json" />
+  </ItemGroup>
+
 </Project>
